[package]
name = "juliaset"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
clap = { version = "4.0.1", features = ["derive"], optional = true }
image = { version = "0.24.3", default-features = false, features = ["png"], optional = true }
ndarray = "0.15.6"
num-complex = "0.4.2"

[features]
cli = ["dep:image", "dep:clap"]

[[bin]]
name = "juliaset"
required-features = ["cli"]

[workspace]
members = ["py-api"]
