[package]
name = "juliaset-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[lib]
name = "juliaset"
crate-type = ["cdylib"]

[dependencies]
juliaset = { path = "..", version = "0.1.0" }
numpy = "0.17.1"
pyo3 = { version = "0.17.1", features = ["extension-module", "abi3-py37", "num-complex"] }
